deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debugger
  namespace: k8s-debugger
  labels:
    app:  k8s-debugger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-debugger
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-debugger
    spec:
      containers:
      - image:  guilhermeoki/debugger
        name:  debugger
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  80
          name:  debugger-port
        - containerPort: 443
          name: auxiliar-port
        imagePullPolicy: Always
      - image:  guilhermeoki/nginx:1.13.10
        name:  nginx
        resources:
          requests:
            cpu: "200m"
            memory: "550M"
        ports:
        - containerPort:  80
          name:  debugger-port
        - containerPort: 443
          name: auxiliar-port
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
      restartPolicy: Always
      volumes:
        - name: nginx-config
          configMap:
            defaultMode: 420
            name: nginx-config
