ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: production-certs
  name: k8s-debugger-haproxy
  namespace: k8s-debugger
spec:
  ingressClassName: haproxy
  rules:
    - host: k8s-debugger.alpha.gm.powerapp.cloud
      http:
        paths:
          - backend:
              service:
                name: k8s-debugger
                port:
                  number: 80
            path: /
            pathType: Prefix
